--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,40 +1,27 @@
 version: 2.1
 
-parameters:
-  # This parameter is used to trigger the main workflow
-  trigger:
-    type: boolean
-    default: true
+orbs:
+  multirepo: dnephin/multirepo@0.0.7
 
-  # A parameter per package
-  api:
-    type: boolean
-    default: false
-  app:
-    type: boolean
-    default: false
-  auth:
-    type: boolean
-    default: false
-
-executors:
-  node:
-    docker:
-      - image: circleci/node
 
 jobs:
-  trigger-workflows:
+
+  audit:
     executor: node
+    working_directory: ~/project/api
     steps:
       - checkout
-      - run:
-          name: Trigger workflows
-          command: chmod +x ./.scripts/circle_trigger.sh && ./.scripts/circle_trigger.sh
+      # - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > /home/circleci/.npmrc
+      - run: npm audit
 
-  test_api:
+  # API job ###################################################################
+  api:
     parameters:
       package_name:
         type: string
+      upstream_branch:
+        type: string
+        default: origin/master
     
     executor: node
     working_directory: ~/project/<< parameters.package_name >>
@@ -42,8 +29,10 @@ jobs:
     steps:
       - checkout:
           path: ~/project
-      - run: pwd
-      - run: ls -lisa
+      - multirepo/run-job-for-paths:
+          paths: ~/project/<< parameters.package_name >>
+          upstream_branch: << parameters.upstream_branch >>
+          working_directory: ../
       # Download and cache dependencies
       - restore_cache:
           keys:
@@ -65,90 +54,77 @@ jobs:
       - store_artifacts:
           path: reports/junit
 
-  build:
+  # APP job ###################################################################
+  app:
     parameters:
       package_name:
         type: string
-
+      upstream_branch:
+        type: string
+        default: origin/master
+    
     executor: node
     working_directory: ~/project/<< parameters.package_name >>
 
     steps:
       - checkout:
           path: ~/project
-      # This step is added only to show that we are in the package directory
-      - run:
-          name: Content 
-          command: |
-            cat README.md 
-            echo "<< parameters.package_name >> built." > build.txt
-      - run:
-          name: Build
-          command: echo "Build << parameters.package_name >> ..."
-      - persist_to_workspace:
-          root: ~/project
-          paths:
-            - packages/<< parameters.package_name >>
+      - multirepo/run-job-for-paths:
+          paths: ~/project/<< parameters.package_name >>
+          upstream_branch: << parameters.upstream_branch >>
+          working_directory: ../
+      - run: echo "something changed - run tests"
+      - run: pwd
 
-  deploy:
+  # AUTH job ###################################################################
+  auth:
     parameters:
       package_name:
         type: string
-
+      upstream_branch:
+        type: string
+        default: origin/master
+    
     executor: node
     working_directory: ~/project/<< parameters.package_name >>
 
     steps:
-      - attach_workspace:
-          at: ~/project
-      # This step is added to show that files are available from the build job. 
-      - run:
-          name: Content to deploy
-          command: ls && cat build.txt
-      - deploy:
-          name: Deploy
-          command: echo "Deploying << parameters.package_name >> ..."
+      - checkout:
+          path: ~/project
+      - multirepo/run-job-for-paths:
+          paths: ~/project/<< parameters.package_name >>
+          upstream_branch: << parameters.upstream_branch >>
+          working_directory: ../
+      - run: echo "something changed - run tests"
+      - run: pwd
+
 
 workflows:
-  version: 2
 
-  # The main workflow responsible for triggering all other workflows
-  # in which changes are detected.
-  ci:
-    when: << pipeline.parameters.trigger >>
+  test-branch:
     jobs:
-      - trigger-workflows
-
-
-  # Workflows defined for each package.
-
-  api:
-    when: << pipeline.parameters.api >>
-    jobs:
-      - test_api:
-          name: api-build
+      - audit:
+          filters:
+            branches:
+              ignore: master
+      - api:
           package_name: api
-
-  app:
-    when: << pipeline.parameters.app >>
-    jobs:
-      - build:
-          name: app-build
+          requires: 
+            - audit
+          filters:
+            branches:
+              ignore: master
+      - app:
           package_name: app
-      - deploy:
-          name: app-deploy
-          package_name: app
-          requires:
-            - app-build
-
-  auth:
-    when: << pipeline.parameters.auth >>
-    jobs:
-      - build:
-          name: auth-build
+          requires: 
+            - audit
+          filters:
+            branches:
+              ignore: master
+      - auth:
           package_name: auth
-      - deploy:
-          name: auth-deploy
-          package_name: auth
-          requires:
-            - auth-build
+          requires: 
+            - audit
+          filters:
+            branches:
+              ignore: master
