--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,8 @@ orbs:
 jobs:
 
   audit:
-    executor: node
+    docker: # run the steps with Docker
+      - image: circleci/node:10.16.3
     working_directory: ~/project/api
     steps:
       - checkout
@@ -23,7 +24,8 @@ jobs:
         type: string
         default: origin/master
     
-    executor: node
+    docker: # run the steps with Docker
+      - image: circleci/node:10.16.3
     working_directory: ~/project/<< parameters.package_name >>
 
     steps:
