--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,8 @@ jobs:
       - image: circleci/node:10.16.3
     working_directory: ~/project/api
     steps:
-      - checkout
+      - checkout:
+          path: ~/project
       # - run: echo "//registry.npmjs.org/:_authToken=$NPM_TOKEN" > /home/circleci/.npmrc
       - run: npm audit
 
